--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -1,1 +1,27 @@
-If you think you should be acknowledged here, write your name below.
+Amongst others, thanks must go to;
+
+\begin{itemize}
+
+	\item Alan Miller, Colin Allison, Miguel Nacenta and Ishbel Duncan for supervising my research.
+	
+	\item EPSRC and the School of Computer Science for funding the endeavour.
+	
+	\item Everybody in the Open Virtual Worlds research group for their contributions, both real and virtual.
+	
+	\item All of my fellow research students, particularly the denizens of the venerable `Taint' chat; Ruth Hoffmann, Luke Hutton and Jonathan Ward.
+	
+	\item All of the staff at the School of Computer Science who made things that much more pleasant, academically or otherwise.
+	
+	\item The innumerable intellects around the world who, whether via mailing lists, Web forums, IRC channels, subreddits, blog comments or personal correspondence, have provided invaluable advice, assistance, input and inspiration on a truly bewildering range of (often seemingly unrelated) topics.
+	
+	\item The PhotoSoc committee and the Ents Crew for providing a life outwith the office.
+	
+	\item Tala Budziszewski for London-based respite.
+	
+	\item Ellen Shaw and Fiona Woodhall for caring so much.
+	
+	\item Steven Lowson for being a best friend even though I never answer his calls.
+	
+	\item And finally my family, for not complaining too vehemently when I answered even fewer of theirs.
+
+\end{itemize}
