--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -60,13 +60,13 @@ In terms of alternate reality techniques, real time augmented reality simulation
 
 %=========================================================================================================
 
-The ARCHEOGUIDE project (Augmented Reality-based Cultural Heritage On-site GUIDE)~\cite{vlahakis:archeoguide} aimed to provide a `personalized electronic guide and tour assistant' to cultural heritage site visitors. On-site help and augmented reality reconstructions of on-site ruins were presented via a laptop, a tablet computer and a PDA, using GPS for location tracking and magnetometer to ascertain direction such that augmentations could be placed accordingly. The applications supported by the platform range from archaeological research to education, multimedia publishing and cultural tourism. The platform was prototyped at the archaeological site of Olympia, Greece.
+The ARCHEOGUIDE project (Augmented Reality-based Cultural Heritage On-site GUIDE)~\cite{vlahakis:archeoguide} aimed to provide a \textit{``personalized electronic guide and tour assistant''} to cultural heritage site visitors. On-site help and augmented reality reconstructions of on-site ruins were presented via a laptop, a tablet computer and a PDA, using GPS for location tracking and magnetometer to ascertain direction such that augmentations could be placed accordingly. The applications supported by the platform range from archaeological research to education, multimedia publishing and cultural tourism. The platform was prototyped at the archaeological site of Olympia, Greece.
 
 As well as being used for walking tours, augmented reality has been combined with the concept of telepresence to create `augmented telepresence', allowing participants to experience a `fly-through' of the ancient Nara Heijo-kyo capital of Japan, by combining aerially captured omnidirectional video with related information using augmented reality techniques~\cite{Okura2006,Okura2011}.
 
-Augmenting views of the real world with real-time animated virtual humans has been explored by several projects, including the LIFEPLUS EU IST project which aimed to produce \textit{``an innovative 3D reconstruction of ancient frescos-paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial life dramaturgical behaviors, in an immersive augmented reality environment''}~\cite{Papagiannakis2004}. This project pushed established augmented reality applications in the field by exploring narrative design in fictional spaces, with the aim of increasing immersion via realistic interaction, making use of captured/real-time video of a real scene, presenting the visitor with \textit{``an immersive and innovative multi-sensory interactive trip to the past''}~\cite{Papagiannakis2005}. These realistic simulations of animated virtual human actors were employed in a mobile and wearable setup, in abandonment of traditional concepts of static cultural artefacts or rigid augmentations of real world features, making use of a markerless camera tracker and mixed reality illumination model for more consistent real-virtual and virtual-real rendering. This platform was demonstrated in a case study on the real site of ancient Pompeii and whilst initially targeted at the cultural heritage sector, the author(s) clarifies that as a platform it is not limited to such subjects~\cite{Papagiannakis2007}. This concept of extending rigid and static augmented reality with character-based event representations hopes to recreate not just discrete artefacts but the entirety of `daily life' at the scene~\cite{Papagiannakis2009}.
+Augmenting views of the real world with real-time animated virtual humans has been explored by several projects, including the LIFEPLUS EU IST project which aimed to produce \textit{``an innovative 3D reconstruction of ancient frescos-paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial life dramaturgical behaviors, in an immersive augmented reality environment''}~\cite{Papagiannakis2004}. This project pushed established augmented reality applications in the field by exploring narrative design in fictional spaces, with the aim of increasing immersion via realistic interaction, making use of captured/real-time video of a real scene, presenting the visitor with \textit{``an immersive and innovative multi-sensory interactive trip to the past''}~\cite{Papagiannakis2005}. These realistic simulations of animated virtual human actors were employed in a mobile and wearable setup, in abandonment of traditional concepts of static cultural artefacts or rigid augmentations of real world features, making use of a markerless camera tracker and mixed reality illumination model for more consistent real-virtual and virtual-real rendering. This platform was demonstrated in a case study on the real site of ancient Pompeii and whilst initially targeted at the cultural heritage sector, the authors clarify that as a platform it is not limited to these subjects~\cite{Papagiannakis2007}. This concept of extending rigid and static augmented reality with character-based event representations hopes to recreate not just discrete artefacts but the entirety of `daily life' at the scene~\cite{Papagiannakis2009}.
 
-Although many applications of augmented reality to cultural heritage sites are mobile in nature, using a variety of tracking techniques to localise the user and determine their orientation, including GPS~\cite{vlahakis:archeoguide}, visual tracking of robust features of the environment~\cite{Kim2009} and omnidirectional range sensing of a landmark database~\cite{Taketomi2011}, there are also those that present a static interface~\cite{Weng2012}, similar to the coin-operated telescopes commonly found at popular tourist attractions.
+Although many applications of augmented reality to cultural heritage sites are mobile in nature, using a variety of tracking techniques to localise the user and determine their orientation, including GPS~\cite{vlahakis:archeoguide}, visual tracking of robust features of the environment~\cite{Kim2009} and omnidirectional range sensing of a landmark database~\cite{Taketomi2011}, there are also those that present a static interface~\cite{Weng2012}, similar to the coin-operated binoculars and telescopes commonly found at popular tourist attractions.
 
 %=========================================================================================================
 
@@ -92,7 +92,7 @@ These sitsim systems have been labelled by their creators as examples of `indire
 
 However likening the Unity based virtual environments of sitsim systems to the panoramic photographs of indirect augmented reality does not fit well with the alternate reality definitions adopted by this thesis (see tables \ref{adopted-alternate-reality-definitions} and \ref{additional-alternate-reality-definitions}) and undervalues the novelty of sitsim as a concept. Fundamentally, the indirect augmented reality platforms presented by Wither et al. still present the user, via the screen of the device, with a view of the real environment upon which virtual objects are placed, even though that view of the real environment is no longer `live' but is instead a photograph captured at a previous point in time. The sitsim platforms presented by Liest\o l et al., however, present via the screen of the device a view of a complete virtual environment rather than a mediated image of the real environment onto which individual virtual objects are placed.
 
-Whilst one could argue that the experience of using a sitsim platform is similar to that of an indirect augmented reality platform, even if it is the human mind that is ultimately performing the `mixing' of the virtual environment with the real environment whilst in a `true' indirect augmented reality platform the mixing of virtual objects and real environment is performed upon the device, a distinction should be made to appreciate that a sitsim system nonetheless presents users with two complete environments, one real and the other virtual, both complete unto themselves, rather than a single environment consisting of a real primary environment augmented by virtual objects. This distinction was raised by Liest\o l et al. and visualised upon the reality-virtuality continuum in figure \ref{sitsim-1.png} taken from~\cite{Liestøl2011} (compare this with the explanation of parallel reality in section \ref{positionofcrossreality} around figure \ref{virtuality-continuum-cross-reality-1}).
+Whilst one could argue that the experience of using a sitsim platform is similar to that of an indirect augmented reality platform, even if it is the human mind that is ultimately performing the `mixing' of the virtual environment with the real environment whilst in a `true' indirect augmented reality platform the mixing of virtual objects and real environment is performed upon the device, a distinction should be made to appreciate that a sitsim system nonetheless presents users with two complete environments, one real and the other virtual, both complete unto themselves, rather than a single environment consisting of a real primary environment augmented by virtual objects. This distinction was raised by Liest\o l et al. and visualised upon the reality-virtuality continuum in figure \ref{sitsim-1.png} taken from~\cite{Liestøl2011} (compare this with the explanation of parallel reality in section \ref{positionofcrossreality} around figure \ref{virtuality-continuum-cross-reality-1}). Furthermore, Liest\o l speaks of how sitsim creates \textit{``double perspective''}~\cite{Liestøl2009}, allowing presentation of topics and subject matters absent or invisible in the real world, wherein the user performs \textit{``oscillations between \ldots\ double descriptions''}~\cite{Liestøl2014}, further allusions to the notion of two complete environments that the user switches their attention between.
 
 \begin{figure}[h]
 \centering
@@ -101,7 +101,7 @@ Whilst one could argue that the experience of using a sitsim platform is similar
   \label{sitsim-1.png}
 \end{figure}
 
-In recognising this distinction, a platform in the style of sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to be directly related to the concept of spatial equivalence discussed in section \ref{spatial-equivalence}. Thus rather than considering existing sitsim systems to be members of the class of alternate reality systems known as indirect augmented reality, this thesis believes that membership of the class of spatially equivalent parallel reality is a better representation of their implementation and experience. This also avoids the somewhat confusing visualisation from Liest\o l et al. in~\cite{Liestøl2011} of sitsim as occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst also being outwith the region of mixed reality.
+In recognising this distinction, a platform in the style of sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to be directly related to the concept of spatial equivalence discussed in section \ref{spatial-equivalence}. Thus rather than considering existing sitsim systems to be members of the class of alternate reality systems known as indirect augmented reality, this thesis believes that membership of the class of spatially equivalent parallel reality is a better representation of their implementation. This also avoids the somewhat confusing visualisation from Liest\o l et al. in~\cite{Liestøl2011} of sitsim as occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst simultaneously being outwith the region of mixed reality.
 
 %sitsim-2.png
 
@@ -129,9 +129,9 @@ The Open Virtual Worlds (OVW) research group at the School of Computer Science a
 
 These reconstructions were made using OpenSim, an open source implementation and extension of the Second Life server, which is compatible with the numerous forks of the Second Life client program. This architecture allows straightforward construction and dissemination of the models, thanks to accessible modelling tools provided by the Second Life client itself and the client/server model of the platform that allows the reconstructions to be accessed in various deployment scenarios including temporary deployments within controlled network and client conditions as well as remotely via the Internet.
 
-The reconstruction process involves the use of Geographic Information System (GIS) data from Ordnance Survey (OS) to accurately model the basic elevation of the ground. Where there is higher resolution elevation data, such as from Lidar laser surveying often employed on archaeological surveys, this is used to increase the accuracy of the resultant reconstruction. Where access to the site is possible and depending upon development surrounding the site prior to the date being reconstructed, 360\textdegree\ panoramic photographs are captured and then used to create a backdrop for the reconstruction, allowing identifiable aspects of the surrounding environment to improve the experience of the reconstruction. Buildings/structures are then reconstructed upon the ground layer, using numerous sources as input; satellite views, archaeological surveys, contemporary accounts, views of the site itself (if evidence still exists), photographic evidence, etc. Domain experts are then consulted in to iteratively improve the model, commenting on aspects of the reconstruction to be altered in order to visualise a different reconstructive hypothesis.
+The reconstruction process involves the use of Geographic Information System (GIS) data from Ordnance Survey (OS) to accurately model the basic elevation of the ground. Where there is higher resolution elevation data, such as from Lidar laser surveying often employed on archaeological surveys, this is used to increase the accuracy of the resultant reconstruction. Where access to the site is possible and depending upon development surrounding the site prior to the date being reconstructed, 360\textdegree\ panoramic photographs are captured and then used to create a backdrop for the reconstruction, allowing identifiable aspects of the surrounding environment to improve the experience of the reconstruction. Buildings/structures are then reconstructed upon the ground layer, using numerous sources as input; satellite views, archaeological surveys, contemporary accounts, views of the site itself (if evidence still exists), photographic evidence, etc. Domain experts are then consulted to iteratively improve the model, commenting on aspects of the reconstruction to be altered in order to visualise a different reconstructive hypothesis.
 
-To date, these reconstructions have been used to host workshops at 10 different schools throughout Scotland, including both primary and secondary institutions, where all requisite computing infrastructure was taken, assembled at the school, then disassembled and removed at the end of the day. Students are split into groups of 4-5, sharing a computer with screen, keyboard, mouse and Xbox controller (a control modality instantly recognised by most school students). Worksheets with tasks are used to structure their interaction with the reconstructions and guide the experiential learning experience over 20-40 minute sessions (see figure \ref{linlithgow_children.jpg}). Similar workshops have also been performed in museums, using the same approach of temporary setups of computing hardware (figure \ref{musa.jpg}). In addition to traditional computer screens, larger LCD television screens, still larger projection screens and Oculus Rift virtual reality HMDs have been used with this same content~(as seen in figure \ref{rift_exhibition.jpg}).
+To date, these reconstructions have been used to host workshops at 10 different schools throughout Scotland, including both primary and secondary institutions, where all requisite computing infrastructure was taken, assembled at the school, then disassembled and removed at the end of the day. Students are split into groups of 4-5, sharing a computer with screen, keyboard, mouse and Xbox controller (a control modality instantly recognised by most school students). Worksheets with tasks are used to structure their interaction with the reconstructions and guide the experiential learning experience over 20-40 minute sessions (see figure \ref{linlithgow_children.jpg}). Similar workshops have also been performed in museums, using the same approach of temporary setups of computing hardware (see figure \ref{musa.jpg}). In addition to traditional computer screens, larger LCD television screens, still larger projection screens and Oculus Rift virtual reality HMDs have been used with this same content~(as seen in figure \ref{rift_exhibition.jpg}).
 
 In addition to these temporary workshops, the reconstructions have also been used in permanently installed exhibits in museums and visitor centres, including the Virtual Time Travel Project (VTTP) which combines multi-head projection with Natural User Interaction (NUI) via Microsoft Kinect and has been installed at the Timespan Museum and Arts Centre in Helmsdale, allowing visitors to explore the reconstruction of the Caen Township by using simple gestures instead of relying upon a keyboard, game controller or other traditional interface (shown in figure \ref{VTTP_projection.png} and featured in a video available to view online\footnote{\url{https://vimeo.com/90968731}}).
 
@@ -147,9 +147,11 @@ In addition to these temporary workshops, the reconstructions have also been use
 
 \label{parallel-reality-in-virtual-heritage}
 
+%Can we take the idea of sitsim, use it to leverage existing Second Life/OpenSim content, to produce a viable parallel reality experience?
+
 Applications of alternate reality techniques within virtual heritage have thus far broadly fallen either into the category of augmented reality experienced at the site, or virtual reality experienced away from the site (in terms of space, time, or both), with occasional exceptions such as sitsim. The dissemination of the OVW group's reconstructions has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png}, using complete virtual environments that are experienced with both spatial and temporal separation from the real sites that they represent.
 
-Applying the concept of parallel reality to virtual heritage via a sitsim style interface represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13, while allowing investigation into the parallel reality concept in a real world use case situation. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of viruality, as the user is provided the ability to alternatively view the complete virtual environment (virtuality = 1) or the unmodified real environment (virtuality = 0). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system will require a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
+Applying the concept of parallel reality to virtual heritage, possibly via a sitsim style interface, represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13, while allowing investigation into the parallel reality concept in a real world use case situation. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of viruality, as the user is provided the ability to alternatively view the complete virtual environment (virtuality = 1) or the unmodified real environment (virtuality = 0). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system will require a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
 
 %=========================================================================================================
 
@@ -158,16 +160,16 @@ Although parallel reality as a concept is less critical of accurate registration
 \begin{enumerate}
 	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario, users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance, similar to the static AR experiences mentioned in section \ref{existing-virtual-heritage-applications}. The minimum distance between any two of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
 	
-	\item Freeform exploration - Where the accuracy of the positioning system is high enough to reliably differentiate a user's position between adjacent rooms/corridors, placing them on the correct side of walls and estimating their position within open areas, a style of interaction wherein the user has the ability to view the virtual environment from the equivalent vantage point wherever they may be in the site is possible. In this scenario, users are free to explore and compare any vantages within both real and virtual environments, although direct comparison of small features/artefacts may not be possible due to inaccuracy in the positioning solution.
+	\item Freeform exploration - Where the accuracy of the positioning system is high enough to reliably differentiate a user's position between adjacent rooms/corridors, placing them on the correct side of walls and estimating their position within open areas, a style of interaction wherein the user has the ability to view the virtual environment from the equivalent vantage point wherever they may be in the site is possible. In this scenario, users are free to explore and compare any vantages within both real and virtual environments, although direct comparison of small features/artefacts observed from less than several meters away may not be possible due to inaccuracy in the positioning solution.
 	
-	\item Freeform exploration with detailed comparison ability - Where extremely accurate positioning is available, a style of interaction that allows the user to not only explore and compare aspects of the real and virtual environments from the equivalent vantage point but also to perform close in-depth comparisons of artefacts is possible. In this scenario not only can users freely compare between real and virtual when walking between different areas of a cultural heritage site, but they can lean in to more closely inspect any particular artefact and perhaps even interact with and effect the virtual artefacts.
+	\item Freeform exploration with detailed comparison - Where extremely accurate positioning is available, a style of interaction that allows the user to not only explore and compare aspects of the real and virtual environments from the equivalent vantage point but also to perform close in-depth comparisons of artefacts is possible. In this scenario not only can users freely compare between real and virtual when walking between different areas of a cultural heritage site, but they can lean in to more closely inspect any particular artefact and perhaps even interact with and effect the virtual artefacts.
 \end{enumerate}
 
 %=========================================================================================================
 
 \section{The Virtual Time Window}
 \label{the-virtual-time-window}
-The Virtual Time Window (VTW) is an application of parallel reality to virtual heritage, that leverages the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform that would allow investigation into parallel reality in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach would also allow for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc.
+The Virtual Time Window (VTW) is an application of parallel reality to virtual heritage, that leverages the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform that would allow investigation into parallel reality in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach would also allow for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc., thanks to OpenSim's distributed multi-user framework.
 
 VTW manifests as a tablet computer which is capable of tracking its position via GPS, its compass heading via magnetometer (`electronic compass') and its pitch via accelerometer. Existing augmented reality and sitsim applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
 
@@ -918,16 +920,20 @@ When considering the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the
 
 Considering the first scenario of static viewpoints, this level of positional accuracy is plenty sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
 
-Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway, when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size, this level of accuracy is sufficient for freeform exploration. For example, when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper, the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 10m does not post much of a problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent.
+Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway, when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size, this level of accuracy is sufficient for freeform exploration. For example, when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper, the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 10m does not pose much of a problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent, a relationship observed by Wither et al. when experimenting with indirect augmented reality.
 
-Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several feet on either side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few feet in the manner that scenario 3 envisages would be unworkable with the positional accuracy of VTW.
+\begin{quote}
+	\textit{``Our user study results suggest that Indirect AR does very well in outdoor applications where the user is more than a few meters away from the physical objects of interest.''}~\cite{Wither2011}
+\end{quote}
 
-The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit greatly from better graphical quality and higher responsiveness to changes in user orientation.
+Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several feet on either side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few meters in the manner that scenario 3 envisages would be unworkable with the positional accuracy of VTW.
+
+The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit from better graphical quality and higher responsiveness to changes in user orientation.
 
 %=========================================================================================================
 
 \subsection{Real World Experience of VTW}
-
+\label{real-world-experience-of-vtw}
 Revisiting the definition of parallel reality, one can consider it to be distinguished by two principal features;
 
 \begin{enumerate}
@@ -941,6 +947,6 @@ Although the VTW platform was developed as a preliminary implementation of the p
 
 \section{Summary}
 
-This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was an initial foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. Real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a freeform exploration scenario wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the vision upheld by parallel reality.
+This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was an initial foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. Real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a freeform exploration scenario wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the vision upheld by parallel reality proposes.
 
 %=========================================================================================================
