--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-mirrorshades}
 
-This chapter discusses the design and development of a parallel reality platform that combines a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras, with an indoor positioning system (IPS), allowing its user to observe and move around their real environment imbued with the ability to alternatively view an immersive VR environment from the equivalent vantage point. Creation of this platform enables investigation of parallel reality experienced through a more immersive display modality than VTW and with higher performance position and orientation tracking allowing the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place in smaller, indoor spaces and even with sufficient accuracy to experience aspects of the third detailed comparison scenario.
+This chapter discusses the design and development of a parallel reality platform that combines a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras, with an indoor positioning system (IPS), allowing its user to observe and move around their real environment imbued with the ability to alternatively view an immersive VR environment from the equivalent vantage point. Creation of this platform enables investigation of parallel reality experienced through a more immersive display modality than VTW and with higher performance position and orientation tracking allowing the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
 
 %Previous XR research approached the vacancy problem by integrating sensor/actuator networks into the environments, such that actions in one could manifest in the other, however direct visual engagement with the virtual environment was only possible from static interfaces at pre-determined locations within the real environment~\cite{Lifton2007a, Dublon2011}. The platform discussed in this document addresses this shortcoming by providing a mobile interface for visual engagement with both environments of a XR system, allowing the user to transition between viewing their real environment and a virtual environment at any time while maintaining the freedom to move around them, multiplexing visual stimuli from their real surroundings and from a parallel, virtual `mirror world'~\cite{Gelernter1993}.
 
@@ -24,13 +24,13 @@ This chapter discusses the design and development of a parallel reality platform
 \section{Overview}
 The development of the VTW platform as a first foray into applying the concept of parallel reality to the field of cultural heritage performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage} wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly implement the freeform exploration scenario for expansive outdoor cultural heritage sites in which visitors view things from some distance where the inaccuracy of positioning is not apparent.
 
-To continue the investigation of the application of parallel reality to cultural heritage, the platform described in this chapter investigates parallel reality used at indoor cultural heritage sites. This allows the use of an IPS to track the user's position, which promises greater accuracy than even SBAS improved GPS does outdoors, allowing for the full freeform exploration scenario to be explored, even in much less expansive sites, and even for aspects of the third scenario with detailed comparison to be experienced. The use of a HMD, capable of producing stereoscopic 3D visuals that completely fill the user's view, in place of a tablet allows the investigation of parallel reality to extend to systems that present truly immersive virtual experience over a `window' into the virtual, which has a very real effect upon the experiential aspect of the parallel reality paradigm when considered in terms of the combined Milgram/Waterworth model.
+To continue the investigation of parallel reality, once again using cultural heritage as a real world case study, the platform described in this chapter investigates parallel reality used at indoor cultural heritage sites. This allows the use of an IPS to track the user's position, which promises greater accuracy than even SBAS improved GPS does outdoors, allowing for the full freeform exploration scenario to be explored, even in much less expansive sites, and even for aspects of the third scenario with detailed comparison to be experienced. Furthermore, the use of a HMD capable of producing stereoscopic 3D visuals that completely fill the user's view, in place of a tablet, allows the investigation of parallel reality to extend to systems that present a completely immersive virtual experience over a `window' into the virtual, realising the true essence of the envisioned experiential aspect of parallel reality that VTW did not achieve.
 
 %=========================================================================================================
 
 \section{The Mirrorshades Platform}
 \label{the-mirrorshades-platform}
-Figure \ref{systemarchitecture} presents a high level architectural overview of the Mirrorshades\footnote{\textbf{Mirrorshades: The Cyberpunk Anthology} (1986) is a defining cyberpunk short story collection edited by Bruce Sterling, who explains how mirrored sunglasses became a literary badge or totem for the cyberpunk movement, whose fiction has frequently involved immersive multi-user virtual environments and HMDs.} parallel reality platform while figure \ref{participant-f-5.jpg} shows its implementation. Mirrorshades allows its user to observe and move around their real environment (RW) whilst wearing a stereoscopic 3D HMD, with their position tracked by an IPS and the HMD's head tracker, switching between viewing RW visual stimuli provided by cameras mounted to the HMD and immersive VR visual stimuli from the equivalent vantage point of the reconstruction, as tracked by the IPS. A controller held by the user is used to control these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD can is carried about the person in a bag/satchel.
+Figure \ref{systemarchitecture} presents a high level architectural overview of the Mirrorshades\footnote{\textbf{Mirrorshades: The Cyberpunk Anthology} (1986) is a defining cyberpunk short story collection edited by Bruce Sterling, who explains how mirrored sunglasses became a literary badge or totem for the cyberpunk movement, whose fiction has frequently involved immersive multi-user virtual environments and HMDs.} parallel reality platform while figure \ref{participant-f-5.jpg} shows its implementation. Mirrorshades allows its user to observe and move around their real environment (RW) whilst wearing a stereoscopic 3D HMD, with their position tracked by an IPS and the HMD's head tracker, switching between viewing RW visual stimuli provided by cameras mounted to the HMD and immersive VR visual stimuli from the equivalent vantage point of the reconstruction, as tracked by the IPS. A controller held by the user is used to control these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD is carried about the person in a bag/satchel.
 
 \begin{figure}[h]
 	\begin{center}
@@ -116,11 +116,11 @@ The March 2014 acquisition of Oculus by Facebook\footnote{\url{https://www.faceb
 
 \subsection{The Oculus Rift DK1 and Unity Game Engine}
 
-The OVW group took delivery of an Oculus Rift DK1 from the first batch of units shipped to the EU in August 2013. The immersive experience of using the DK1, thanks to its wide FOV, fast and accurate head tracking, stereoscopic 3D and novelty compared to traditional 2D displays, presents a markedly different modality of interaction with virtual content than the 10'' display of the tablet used by VTW.
+The OVW group took delivery of an Oculus Rift DK1 from the first batch of units shipped to the EU in August 2013. The immersive experience of using the DK1, thanks to its wide FOV, fast and accurate head tracking, stereoscopic 3D and novelty compared to traditional 2D displays, presents a markedly different modality of interaction with virtual content than the 10'' display of the tablet used by VTW and by filling the user's entire field of view with whatever visuals are displayed to its screen, the Rift will allow for investigation of the switching between real and virtual environments aspect of parallel reality identified in section \ref{real-world-experience-of-vtw}.
 
-At this early stage in the DK1's release, the best supported software platform in terms of API provision and integration was the Unity game engine. After experience with modifying the Second Life client with the VTW project, it was decided best to convert the OVW group's OpenSim model of St Salvator's chapel into a Unity compatible format rather than embarking upon further modification to the Second Life client to support the DK1.
+At this early stage in the DK1's release, the best supported software platform in terms of API provision and integration was the Unity game engine. After experience with modifying the Second Life client with the VTW project, it was decided best to convert the OVW group's OpenSim model of St Salvator's chapel into a Unity compatible format rather than embarking upon further modification to the Second Life client to support the DK1. Since the development of VTW, the OVW group successfully engineered an automated process for converting OpenSim content into Unity compatible content, allowing the group's existing content to be deployed within Unity executables.
 
-One deciding factor in this deliberation was the more stringent performance requirements for an enjoyable HMD experience compared to those of a traditional desktop/handhend display experience; when using a HMD such as the DK1, a high and smooth framerate is required to avoid a kind of motion sickness referred to as `simulator sickness', with Oculus' official guidelines being for Rift applications to \textit{``run at a frame rate equal to or greater than the Rift display refresh rate''}\footnote{\url{http://static.oculus.com/sdk-downloads/documents/Oculus_Best_Practices_Guide.pdf}} which in the case of the DK1 is 60Hz. Due to the possibly ephemeral nature of Second Life content, where users are free to create, modify and destroy content in real time, Second Life as a 3D platform suffers in terms of performance compared to game engines such as Unity due to not being able to exploit techniques such as occlusion culling~\cite{willmott:largecomplex} which require an offline processing phase that depends upon environmental content remaining unchanged throughout its use. The OVW group's experience in presenting Second Life/OpenSim content on a range of different hardware did not point to good odds of managing to render the St Salvator's chapel scene at 60fps, especially considering the overhead introduced by stereoscopic rendering even if the total resolution of the two side-by-side images is no greater than the single equivalent monoscopic image. As Mirrorshades is a mobile application and the computer producing the visuals is carried by the user, the specification of this client are limited compared to those that the group has used in alternative static deployments.
+One deciding factor in opting to convert OpenSim content to Unity rather than use the content in its original OpenSim setting, was the more stringent performance requirements for an enjoyable HMD experience compared to those of a traditional desktop/handhend display experience; when using a HMD such as the DK1, a high and smooth framerate is required to avoid a kind of motion sickness referred to as `simulator sickness', with Oculus' official guidelines being for Rift applications to \textit{``run at a frame rate equal to or greater than the Rift display refresh rate''}\footnote{\url{http://static.oculus.com/sdk-downloads/documents/Oculus_Best_Practices_Guide.pdf}} which in the case of the DK1 is 60Hz. Due to the possibly ephemeral nature of Second Life/OpenSim content, where users are free to create, modify and destroy content in real time, Second Life as a 3D platform suffers in terms of performance compared to game engines such as Unity due to not being able to exploit techniques such as occlusion culling~\cite{willmott:largecomplex} which require an offline processing phase that depends upon environmental content remaining unchanged throughout its use. The OVW group's experience in presenting Second Life/OpenSim content on a range of different hardware did not point to good odds of managing to render the St Salvator's chapel scene at 60fps, especially considering the overhead introduced by stereoscopic rendering even if the total resolution of the two side-by-side images is no greater than the single equivalent monoscopic image. As Mirrorshades is a mobile application and the computer producing the visuals is carried by the user, the specification of this client are limited compared to those that the group has used in alternative static deployments.
 
 %=========================================================================================================
 
