--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -409,9 +409,25 @@ Further comparing head movements between the VR section of the seated VR scenari
 
 %=========================================================================================================
 
+\subsection{Freeform Exploration and Detailed Comparison}
+
+In terms of the three scenarios described in section \ref{parallel-reality-in-virtual-heritage} for application of parallel reality to virtual heritage, the Mirrorshades platform proved throughout this first stage of investigation that it had both the positional accuracy and the orientational accuracy to fully achieve the freeform exploration scenario even in the confines of an indoor cultural heritage site and even when the participant was in very close proximity to walls/corners as shown in figures \ref{Mirrorshades-close-comparison-3.png} and \ref{Mirrorshades-close-comparison-4.png}.
+
+\TwoFig{Mirrorshades-close-comparison-3.png} {Mirrorshades functioning in close proximity to walls/obstacles (1/2).} {Mirrorshades-close-comparison-3.png}
+       {Mirrorshades-close-comparison-4.png} {Mirrorshades functioning in close proximity to walls/obstacles (2/2).} {Mirrorshades-close-comparison-4.png}
+
+Additionally, the positional and orientational accuracy were for the most part even accurate enough for participants to perform detailed comparisons between real and virtual artefacts as close as arm's length, as shown in figures \ref{Mirrorshades-close-comparison-1.png} and \ref{Mirrorshades-close-comparison-2.png}.
+
+\TwoFig{Mirrorshades-close-comparison-1.png} {Using Mirrorshades to perform detailed comparison between real and virtual artefacts (1/2)} {Mirrorshades-close-comparison-1.png}
+       {Mirrorshades-close-comparison-2.png} {Using Mirrorshades to perform detailed comparison between real and virtual artefacts (2/2)} {Mirrorshades-close-comparison-2.png}
+
+%=========================================================================================================
+
 \section{Summary}
 
 The first stage of investigation directly compared a seated VR scenario in which VR content has already begun to be used at cultural heritage sites with the mobile style of interaction afforded by the Mirrorshades platform, addressing both temporal and spatial separation between experience of the real and virtual environments. The Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon seated VR techniques employable for the presentation of the same content by allowing immediate comparison and contrast between corresponding vantage points in both the RW and VR environments, successfully addressing the hindrance of on-site comparison of real and virtual environments.
+
+The accuracy of position and orientation data throughout the investigations was sufficient to fully realise the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} even in the confines of an indoor environment, and additionally accuracy was for the most part sufficient for the freeform exploration with detailed comparison scenario. The immersive nature of the visuals produced by the Oculus Rift DK1 HMD, completely filling the user's FOV with stimuli from its screen, allowed for the experiential aspect of switching between real and virtual environments envisaged by the parallel reality paradigm to be truly accomplished and explored.
 
 Through questionnaire data and interview transcripts participants reported that overall they found the parallel reality scenario to be both more enjoyable and more rewarding than the seated VR scenario, despite the decreased usability and comfort effected by the requirement to don and carry a satchel of hardware and hold devices in both hands. The parallel reality scenario was reported as allowing easier comparison and contrast between RW and VR environments, leading participants to recognise more differences between the two environments and leading to a greater change in and better understanding of the chapel than with the seated VR scenario. The visual acuity afforded by the cameras and both the accuracy and lag of the IPS surfaced as the major detractors to the experience of the parallel reality scenario.
 
