--- a/thesis.tex
+++ b/thesis.tex
@@ -180,8 +180,8 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-%\chapter*{Acknowledgements}
-%\input{00_acknowledgements/acknowledgements.tex}
+\chapter*{Acknowledgements}
+\input{00_acknowledgements/acknowledgements.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
@@ -245,6 +245,10 @@
 \addcontentsline{toc}{chapter}{Appendices}
 
 \begin{appendices}
+
+\chapter{Publications}
+\label{publications}
+\input{publications.tex}
 
 \chapter{Stage 1 Evaluation 12-item Likert-type Questionnaire}
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/12-item-likert-type-questionnaire-stage-1.pdf}
